--- a/templates/index.html
+++ b/templates/index.html
@@ -2,28 +2,28 @@
   <head>
     <style type="text/css">
       body {
-        background: black;
-        color: green;
+        background: white;
+        color: red;
       }
       div.container {
         max-width: 500px;
         margin: 100px auto;
-        border: 20px solid white;
+        border: 20px solid blue;
         padding: 10px;
         text-align: center;
       }
       h4 {
-        text-transform: uppercase;
+        #text-transform: uppercase;
       }
     </style>
   </head>
   <body>
     <div class="container">
-      <h4>Welcome to PythonApp running on Docker containers inside Jenkins!!</h4>
-      <h4>We have automated Docker image creation & spinning up Containers using Jenkins!!</h4>
-      <h4>Automating using Jenkins, Docker, GitHub and Pipeline!!!!!</h4>
+      <h4>Namaskar Bhubaneshwar!!</h4>
+      <h4>We have automated Docker image creation & deploying containers!!</h4>
+      <h4>Automated using Docker, AKS and Azure DevOps!!!!!</h4>
       <br>
-       <h4>Anything is Possible!!!!!</h4>
+       <h4>Keep learning!!!!!</h4>
     </div>
   </body>
 </html>
