--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
   </head>
   <body>
     <div class="container">
-      <h4>Namaskar Bhubaneshwar!!</h4>
+      <h4>WELCOME TO HASHEDIN BY DELOITTE</h4>
       <h4>We have automated Docker image creation & deploying containers!!</h4>
       <h4>Automated using Docker, AKS and Azure DevOps!!!!!</h4>
       <br>
